// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly when disabled 1`] = `
<li
  aria-current={false}
  className="typography primary start singleLineEllipsis text text2Normal itemButton"
  data-testid="menu-item-button"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={true}
    className="buttonComponent button sizeSmall kindPrimary colorPrimary disabled"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    tabIndex={-1}
    type="button"
  >
    <div
      className="content"
    >
      my item
    </div>
  </button>
</li>
`;

exports[`Snapshots renders correctly when selected 1`] = `
<li
  aria-current={false}
  className="typography primary start singleLineEllipsis text text2Normal itemButton"
  data-testid="menu-item-button"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="buttonComponent button sizeSmall kindPrimary colorPrimary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    >
      my item
    </div>
  </button>
</li>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<li
  aria-current={false}
  className="typography primary start singleLineEllipsis text text2Normal itemButton dummy-class-name"
  data-testid="menu-item-button"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="buttonComponent button sizeSmall kindPrimary colorPrimary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    />
  </button>
</li>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<li
  aria-current={false}
  className="typography primary start singleLineEllipsis text text2Normal itemButton"
  data-testid="menu-item-button"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="buttonComponent button sizeSmall kindPrimary colorPrimary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    />
  </button>
</li>
`;

exports[`Snapshots renders correctly with title and icon 1`] = `
<li
  aria-current={false}
  className="typography primary start singleLineEllipsis text text2Normal itemButton"
  data-testid="menu-item-button"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="buttonComponent button sizeSmall kindPrimary colorPrimary"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="content"
    >
      my item
    </div>
  </button>
</li>
`;
